...
    var title: String {
        switch self {
        case .query: return NSLocalizedString("查询", comment: "debug command group")
        case .display: return NSLocalizedString("显示与播放", comment: "debug command group")
        case .scroll: return NSLocalizedString("文字滚动", comment: "debug command group")
        case .network: return NSLocalizedString("网络", comment: "debug command group")
        case .faces: return NSLocalizedString("表情库", comment: "debug command group")
        case .device: return NSLocalizedString("设备与电源", comment: "debug command group")
        case .subscription: return NSLocalizedString("订阅", comment: "debug command group")
        }
    }
}

...
