...
            "state" : "translated",
            "value" : "傳送失敗：%@"
          }
        }
      }
    },
    "发送并播放" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Send and play"
          }
...
            "state" : "translated",
            "value" : "捲動文字"
          }
        }
      }
    },
    "滚动文字内容" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Scrolling text content"
          }
...
            "state" : "translated",
            "value" : "捲動速度"
          }
        }
      }
    },
    "演出" : {
      "comment" : "output source",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Live"
...
            "state" : "translated",
            "value" : "表情庫"
          }
        }
      }
    },
    "表情显示" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Faces"
          }
...
            "state" : "translated",
            "value" : "讓表情跟著聲音動起來。"
          }
        }
      }
    },
    "记住上次的标签页" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remember last tab"
          }
...
